# message(['STATUS', '+++ Start CMake ${CMAKE_CURRENT_SOURCE_DIR}!'])
# get_filename_component(['TARGET_NAME', cmake_current_source_dir, 'NAME_WE'])
# file(GLOB_RECURSE TEST_LIST *.cpp)
src_dir = [projectgroup_source_dir, '/test/src']
### foreach(lib ${XCSOAR_LINK_LIBRARIES})
###      message(STATUS "### Add-Library to test: ${lib} ")
### endforeach()
### message(FATAL_ERROR "### Stop !!!!")
# foreach(['source_file', test_list])
#    string(REPLACE "${TARGET_NAME}/" "" source_file ${source_file})
#    list(APPEND SOURCE_FILES ${source_file})
# message(['STATUS', '+++ Add Test-Project to test: ${source_file} '])
# add_compile_definitions('__STDC_VERSION__= 199901L')
# ?
# get_filename_component(['test', source_file, 'NAME_WE'])
# get_filename_component(['test_path', source_file, 'DIRECTORY'])
# list(['APPEND', 'source_file', src_dir, '/DebugPort.cpp'])
# list(['APPEND', 'source_file', projectgroup_source_dir, '/src/Operation/ConsoleOperationEnvironment.cpp'])
#xxx list(APPEND source_file ${PROJECTGROUP_SOURCE_DIR}/temp/data/memory_fields.c)
test_exe = executable(test, source_file, test_path, '/tap.c')
# set_target_properties([test, 'PROPERTIES', 'FOLDER', '_Test', 'EXCLUDE_FROM_ALL', 'TRUE'])
# target_link_libraries([test, 'PUBLIC', xcsoar_link_libraries])
# add_dependencies([test, 'libXCSoar'])
#     message(STATUS "### ${test_path}  --- ${test}")
# endforeach()
